--- a/shortdb.bib
+++ b/shortdb.bib
@@ -880,6 +880,18 @@ Processing},
  year = {1967}
 }
 
+@proceedings{DBLP:conf/interspeech/2012,
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/conf/interspeech/2012},
+ publisher = {{ISCA}},
+ timestamp = {Mon, 27 Jan 2014 17:26:55 +0100},
+ title = {{INTERSPEECH} 2012, 13th Annual Conference of the International Speech
+Communication Association, Portland, Oregon, USA, September 9-13,
+2012},
+ url = {http://www.isca-speech.org/archive/interspeech\_2012},
+ year = {2012}
+}
+
 @proceedings{DBLP:conf/interspeech/2014,
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/conf/interspeech/2014},
@@ -914,6 +926,21 @@ Communication Association, Singapore, September 14-18, 2014},
 modeling},
  url = {http://www.isca-speech.org/archive/interspeech\_2014/i14\_2635.html},
  year = {2014}
+}
+
+@inproceedings{DBLP:conf/interspeech/HeF12,
+ author = {Yanzhang He and
+Eric Fosler{-}Lussier},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/conf/interspeech/HeF12},
+ booktitle = {{INTERSPEECH} 2012, 13th Annual Conference of the International Speech
+Communication Association, Portland, Oregon, USA, September 9-13,
+2012},
+ crossref = {DBLP:conf/interspeech/2012},
+ timestamp = {Mon, 16 Mar 2015 16:59:59 +0100},
+ title = {Efficient Segmental Conditional Random Fields for One-Pass Phone Recognition},
+ url = {http://www.isca-speech.org/archive/interspeech\_2012/i12\_1898.html},
+ year = {2012}
 }
 
 @inproceedings{DBLP:conf/interspeech/MikolovKBCK10,
