--- a/tinydb.bib
+++ b/tinydb.bib
@@ -74,6 +74,20 @@ and Clark, Peter E.},
  year = {2016}
 }
 
+@article{8037994,
+ author = {H. {Tang} and L. {Lu} and L. {Kong} and K. {Gimpel} and K. {Livescu} and C. {Dyer} and N. A. {Smith} and S. {Renals}},
+ doi = {10.1109/JSTSP.2017.2752462},
+ issn = {1932-4553},
+ journal = {IEEE Journal of Selected Topics in Signal Processing},
+ keywords = {acoustic signal processing;decoding;encoding;finite state machines;learning (artificial intelligence);recurrent neural nets;signal classification;speech recognition;speech recognition;neural network-based weight functions;end-to-end training;frame-level neural classifiers;segmental recurrent neural networks;segmental frame-level losses;end-to-end neural segmental models;neural network-based acoustic encoder;finite-state transducer decoder;Hidden Markov models;Computational modeling;Automatic speech recognition;Speech recognition;Predictive models;Mel frequency cepstral coefficient;Connectionist temporal classification;end-to-end training;multitask training;segmental models},
+ month = {Dec},
+ number = {8},
+ pages = {1254-1264},
+ title = {End-to-End Neural Segmental Models for Speech Recognition},
+ volume = {11},
+ year = {2017}
+}
+
 @inproceedings{AAAI1612236,
  abstract = {Cross-lingual model transfer has been a promising approach for inducing dependency parsers for low-resource languages where annotated treebanks are not available. The major obstacles for the model transfer approach are two-fold: 1. Lexical features are not directly transferable across languages; 2. Target language-specific syntactic structures are difficult to be recovered. To address these two challenges, we present a novel representation learning framework for multi-source transfer parsing. Our framework allows multi-source transfer parsing using full lexical features straightforwardly. By evaluating on the Google universal dependency treebanks (v2.0), our best models yield an absolute improvement of 6.53% in averaged labeled attachment score, as compared with delexicalized multi-source transfer models. We also significantly outperform the state-of-the-art transfer system proposed most recently.},
  author = {Jiang Guo and Wanxiang Che and David Yarowsky and Haifeng Wang and Ting Liu},
