--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1025,6 +1025,24 @@ Tasks},
  year = {2019}
 }
 
+@article{DBLP:journals/corr/abs-1903-07785,
+ archiveprefix = {arXiv},
+ author = {Alexei Baevski and
+Sergey Edunov and
+Yinhan Liu and
+Luke Zettlemoyer and
+Michael Auli},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1903-07785},
+ eprint = {1903.07785},
+ journal = {CoRR},
+ timestamp = {Mon, 01 Apr 2019 14:07:37 +0200},
+ title = {Cloze-driven Pretraining of Self-attention Networks},
+ url = {http://arxiv.org/abs/1903.07785},
+ volume = {abs/1903.07785},
+ year = {2019}
+}
+
 @article{DBLP:journals/corr/abs-1904-02099,
  archiveprefix = {arXiv},
  author = {Daniel Kondratyuk},
