--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1269,6 +1269,24 @@ Dan Jurafsky},
  year = {2017}
 }
 
+@article{DBLP:journals/corr/LiuCGQL16,
+ archiveprefix = {arXiv},
+ author = {Yijia Liu and
+Wanxiang Che and
+Jiang Guo and
+Bing Qin and
+Ting Liu},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/LiuCGQL16},
+ eprint = {1604.05499},
+ journal = {CoRR},
+ timestamp = {Mon, 13 Aug 2018 16:46:34 +0200},
+ title = {Exploring Segment Representations for Neural Segmentation Models},
+ url = {http://arxiv.org/abs/1604.05499},
+ volume = {abs/1604.05499},
+ year = {2016}
+}
+
 @article{DBLP:journals/corr/MnihKSGAWR13,
  author = {Volodymyr Mnih and
 Koray Kavukcuoglu and
